--- a/back/index2.html
+++ b/back/index2.html
@@ -205,7 +205,7 @@
              style="width:184px;height:146px;" class="floating_element" />
         <div>
           <span style="margin-top: 1.5em;" class="floating_element">
-            Apache2 Default Page
+            Apache2 Default Page back2
           </span>
         </div>
         <div class="banner">
